# eqVTK

./: CMakeLists.txt  README.md
CMake/: FindPackages.cmake  FindRequired.cmake  VTKDemos.cmake
configs/: 4nodes.DB.eqc
datasets/: noise.vtk
eqVTK/: CMakeLists.txt  Channel.cpp  Channel.h  Client.cpp  Client.h  Config.cpp  Config.h  FrameData.cpp  FrameData.h  InitData.cpp  InitData.h  Node.cpp  Node.h  Pipe.cpp  Pipe.h  Pipeline.cpp  Pipeline.h  Window.cpp  Window.h  eqVTK.cpp  eqVTK.h  hello.cpp  isosurface.cpp  main.cpp  paths.cpp.in  paths.h  vtkCamera.cpp  vtkCamera.h  vtkRenderWindow.cpp  vtkRenderWindow.h
